# ceiLED

./: .env.sample  .gitignore  .gitlab-ci.yml  .travis.yml  README.md  ReadMe.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.pca9685.yml  docker-compose.yml  package-lock.json  package.json
.gitlab-ci/: utils.sh
.travis/: deploy.sh  deployignore  travis_key.enc
ceiled-cli/: .gitignore  ReadMe.md  ceiled  utils.sh
ceiled-cli/commands/: auth.sh  build.sh  env.sh  install.sh  logs.sh  restart.sh  start.sh  status.sh  stop.sh  update.sh
ceiled-cli/tests/: utils.sh  utils.test.sh
ceiled-driver/: Cargo.toml  Dockerfile  ReadMe.md  build.rs
ceiled-driver/src/: api.lalrpop  ceiled.rs  colors.rs  command.rs  commands.rs  debug.rs  main.rs  manager.rs  pca9685.rs
ceiled-server/: .eslintignore  .eslintrc.js  Dockerfile  ReadMe.md  package.json  tsconfig.json  tslint.json
ceiled-server/docs/: api-v1.md  api.md
ceiled-server/src/: ControllerSettings.ts  config.ts  server.ts  typings.d.ts  utils.ts
ceiled-web/: .dockerignore  .env.development  .eslintignore  .eslintrc.json  .gitignore  .prettierrc.json  Caddyfile  Dockerfile  config.ts  package-lock.json  package.json  tsconfig.json
ceiled-web/api/: colors.ts  index.ts  patterns.ts  requests.ts
ceiled-web/caddy/: build-config.sh  template-same-port.json
ceiled-web/components/: About.tsx  ErrorDialog.tsx  Footer.tsx  Header.tsx
ceiled-web/controls/: AnimationControls.tsx  GlobalControls.tsx  MoodControls.tsx  SolidControls.tsx  index.tsx
ceiled-web/nginx/: make-config.sh
ceiled-web/pages/: _app.tsx  _document.tsx  index.tsx
ceiled-web/public/: __ENV.js  browserconfig.xml  index.html  manifest.json
ceiled-web/scripts/: docker-cmd.sh
ceiled-web/src/: App.js  App.tsx  LEDControls.js  config.ts  index.css  (+7 more)
controller/: ReadMe.md  package-lock.json  package.json  tsconfig.json  tslint.json
(+294 files in other folders)
