[package]
name = "ceiled-driver"
description = "Low-level LED strip driver for CeiLED"
version = "1.0.0"
authors = ["Bart van Oort <bvobart@gmail.com>"]
edition = "2018"
homepage = "https://ceiled.bart.vanoort.is"
repository = "https://github.com/bvobart/ceiLED"
include = ["src/**/*.rs"]

[dependencies]
linux-embedded-hal = "0.2.2"
pwm-pca9685 = "0.1.0"
ctrlc = "3.1.2"
rand = "0.6.5"
crossterm = "0.9.5"
nix = "0.14.0"
lazy_static = "1.3.0"
cancellation = "0.1.0"
crossbeam-channel = "0.3.8"
clap = "2.33.0"
