[package]
name = "ceiled-driver"
description = "Low-level LED strip driver for CeiLED"
version = "1.1.1"
authors = ["Bart van Oort <bvobart@gmail.com>"]
edition = "2018"
homepage = "https://ceiled.bart.vanoort.is"
repository = "https://github.com/bvobart/ceiLED"
include = ["src/**/*.rs"]

[dependencies]
linux-embedded-hal = "0.2.2"
pwm-pca9685 = "0.1.1"
ctrlc = "3.1.3"
rand = "0.7.0"
crossterm = "0.11.1"
nix = "0.15.0"
lazy_static = "1.4.0"
cancellation = "0.1.0"
crossbeam-channel = "0.4.4"
clap = "2.33.0"
parking_lot = { version = "0.9.0", features = ["deadlock_detection"], optional = true}
lalrpop-util = "0.17.2"
regex = "1.3.1"

[build-dependencies]
lalrpop = "0.17.2"

[features]
deadlock_detection = ["parking_lot"]
default = ["deadlock_detection"]
